# pumas-navigation-docker

./: .clangd  .gitignore  .gitmodules  Dockerfile  README.md  docker-compose.yml  localization-compose.yml  ros_entrypoint.sh  sim-test.yml  slam-compose.yml  todo.txt
follow_human/follow_start/launch/: _follow_me.launch  follow_me.launch
follow_human/human_follower/src/: human_follower_node.cpp
follow_human/leg_finder/src/: leg_finder_node.cpp
hardware/arm/scripts/: joint_pub.py
hardware/arm/src/: arm_node.cpp
hardware/head/src/: head_node.cpp
hsr_hector/: readme
hsr_hector/launch/: hector_hsr.rviz
hsr_tools/robot_tasks/scripts/: .lme_test.py.swp  followme_demo.py  lme_test.py
logs/: move_error.txt  navig_log_correct.txt  navig_log_fail.txt
navigation/augment_gridmap_online/: README.md
navigation/augment_gridmap_online/io/: areas.yaml
navigation/augment_gridmap_online/src/: AugmentedGridmaps.cpp  areas.yaml
navigation/config_files/: GraspingDict.csv  known_locations (copy).yaml  known_locations-TMR.yaml  known_locations.yaml  known_locations_old.yaml  known_locations_sim.yaml  known_locations_stickler.yaml  known_locations_stickler_sim.yaml  known_locations_storing.yaml  known_locations_storingTMR.yaml  known_locs_apartment.yaml  known_locs_serving_sim.yaml  objects.csv  pickup_region.npy  receptionist_knowledge.yaml  room_regions_stickler.npy  room_regions_stickler_lab.npy  segmentation_params.yaml
navigation/config_files/launch/: navigation_real.launch  navigation_sim.launch
navigation/config_files/regions/: pickup_region.npy  pickup_region_sim.npy  pickup_sim.npy  regions.yaml  regions_sim.yaml  shelves_region.npy  shelves_region_sim.npy
navigation/exploration/scripts/: autonomous_exploration.py
navigation/hmm_navigation/: CMakeLists.txt  package.xml  pumas_nav_actionserver.py  readme.md
navigation/hmm_navigation/action/: Navigate.action
navigation/hmm_navigation/msg/: NavigateFeedback.msg  NavigateGoal.msg  NavigateResult.msg
navigation/hmm_navigation/scripts/: .potfields_takeshi_real_bk.py.swp  Viterbi_node.py  hmm_nav_actionserver.py  hmm_nav_utils.py  potfields_rest.py  potfields_takeshi.py  potfields_takeshi_navroute.py  potfields_takeshi_real.py  potfields_takeshi_real_bk.py  potfields_takeshi_real_rev.py  potfields_takeshi_rev.py  potfields_takeshi_sim.py  pumas_nav.py  pumas_nav_actionserver.py  pumas_nav_actionserver_rotfix.py  utils_hmm.py
navigation/local_grid_map/: CMakeLists.txt  package.xml
navigation/local_grid_map/launch/: local_grid_map.launch
navigation/local_grid_map/src/: local_grid_map_node.cpp
navigation/map_augmenter/src/: map_augmenter_bypass_cost_node.cpp  map_augmenter_node.cpp
navigation/motion_synth/: CMakeLists.txt  package.xml
navigation/motion_synth/action/: MotionSynthesis.action
navigation/motion_synth/launch/: motion_synth.launch
navigation/motion_synth/msg/: Joints.msg  StartAndEndJoints.msg
navigation/motion_synth/script/: _motion_synthesis_server.py  global_pose_publisher.py  motion_synthesis_server.py
navigation/motion_synth/src/motion_synthesis_server/: core.py
navigation/mvn_pln/: CMakeLists.txt  package.xml
navigation/mvn_pln/src/: mvn_pln_node.cpp
navigation/navig_msgs/: CMakeLists.txt
navigation/navig_msgs/srv/: PlanPath.srv
navigation/navigation_start/launch/: '  .navigation.launch.swp  .navigation_cartographer.launch.swp  :w:w  _navigation_cml.launch  cml.launch  navigation.launch  navigation_cartographer.launch  navigation_cml.launch  navigation_fcsc.launch  navigation_fcsc_in.launch  (+5 more)
navigation/obstacle_detector/: CMakeLists.txt  make_pclxyz.py  package.xml
navigation/obstacle_detector/scripts/: collision_aware.py  collision_from_detic.py  obstacle_detector.py
navigation/obstacle_detector/src/: .obs_detect_node.cpp.swp  collision_from_detic.cpp  collision_from_detic_service.cpp  obs_detect_node.cpp
navigation/path_planner/: CMakeLists.txt  package.xml
navigation_tools/: CMakeLists.txt  package.xml
navigation_tools/src/navigation_tools/: nav_tool_lib.py  pot_fields_updator.py  search_safe_point.py  test_nav_status.py  tmp_head_pose_canceller.py
test_files/: CMakeLists.txt  package.xml
test_files/scripts/: generate_pathplan.py  lme_test.py  nav_test.py  nav_tool_test.py
(+59 files in other folders)
