<?xml version="1.0"?>
<package format="2">
  <name>motion_synth</name>
  <version>0.0.0</version>
  <description>The motion_synth package for pumas navigation</description>

  <maintainer email="kobayashi.ryohei621@mail.kyutech.jp">Ryohei Kobayashi</maintainer>
  <author email="ono.tomohiro342@mail.kyutech.jp">Tomohiro Ono</author>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>message_generation</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>message_runtime</exec_depend>

  <export>
  </export>
</package>
